[gd_scene load_steps=21 format=4 uid="uid://87ikob4x4k87"]

[ext_resource type="Script" uid="uid://s23akc7bi1ql" path="res://scenes/components/debug/levelexample/levelexample.gd" id="1_yxd6m"]
[ext_resource type="Script" uid="uid://b3xe5768ajbua" path="res://scenes/components/phase2/simplemap/map_manager.gd" id="2_pulvh"]
[ext_resource type="TileSet" uid="uid://bf1vksvfrjh5h" path="res://resources/tilesets/simple isometric tiles fantasy.tres" id="3_bs1i3"]
[ext_resource type="TileSet" uid="uid://d2f8celuvfn7" path="res://resources/tilesets/Selects Tileset.tres" id="4_7lr0t"]
[ext_resource type="Script" uid="uid://g6evar1ip8pg" path="res://scenes/components/phase2/managers/turn_manager.gd" id="5_hpt63"]
[ext_resource type="Texture2D" uid="uid://db3vpxrl3rims" path="res://assets/sprites/Map/Map Initializer 32x32.png" id="5_urvil"]
[ext_resource type="Script" uid="uid://bfvnl7fhm1b7m" path="res://scenes/components/phase2/managers/entity_initializer.gd" id="6_pa45f"]
[ext_resource type="Script" uid="uid://j80klyllg32k" path="res://scenes/components/phase2/managers/player_unit_manager.gd" id="6_ugvcm"]
[ext_resource type="PackedScene" uid="uid://bdngd8yodmnym" path="res://scenes/components/phase2/actions/Action-Decoder.tscn" id="7_kb0u0"]
[ext_resource type="Script" uid="uid://dc3mpm54egbqc" path="res://resources/units/unit_res.gd" id="7_w5nbb"]
[ext_resource type="PackedScene" uid="uid://cmwrkn13c45qj" path="res://scenes/ui/phase2/components/cursor/Cursor.tscn" id="8_262ej"]
[ext_resource type="Resource" uid="uid://bc1k5rj4fsjdg" path="res://resources/units/simple_knight.tres" id="8_tm18g"]
[ext_resource type="Resource" uid="uid://bkbee2vs6l8f1" path="res://resources/units/Drunken Master.tres" id="9_ccsti"]
[ext_resource type="PackedScene" uid="uid://b18istpat370g" path="res://scenes/ui/phase2/UI-Phase-2.tscn" id="9_dilsu"]
[ext_resource type="PackedScene" uid="uid://cnt7illh76qd3" path="res://scenes/components/phase2/trapstuff/spiketrap.tscn" id="10_ccsti"]
[ext_resource type="Script" uid="uid://ci5a1fo4lp0hk" path="res://scenes/components/phase2/managers/unit_manager.gd" id="12_pa45f"]
[ext_resource type="PackedScene" uid="uid://bkc3adf4mya06" path="res://scenes/components/phase2/unit/Player Unit.tscn" id="12_w5nbb"]
[ext_resource type="Script" uid="uid://drj8oexjt8k2u" path="res://scenes/components/phase2/managers/trap_manager.gd" id="17_tm18g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r6ms3"]
texture = ExtResource("5_urvil")
margins = Vector2i(1, 0)
separation = Vector2i(1, 1)
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = true
0:0/0/custom_data_1 = -1
0:0/0/custom_data_2 = -1
1:0/0 = 0
1:0/0/custom_data_2 = -1
2:0/0 = 0
2:0/0/custom_data_1 = 1
2:0/0/custom_data_2 = -1
3:0/0 = 0
3:0/0/custom_data_1 = 2
3:0/0/custom_data_2 = -1
4:0/0 = 0
4:0/0/custom_data_1 = 3
4:0/0/custom_data_2 = -1
5:0/0 = 0
5:0/0/custom_data_1 = 4
5:0/0/custom_data_2 = -1
6:0/0 = 0
6:0/0/custom_data_1 = 5
6:0/0/custom_data_2 = -1
7:0/0 = 0
7:0/0/custom_data_1 = 6
7:0/0/custom_data_2 = -1
0:1/0 = 0
0:1/0/custom_data_1 = 7
0:1/0/custom_data_2 = -1
1:1/0 = 0
1:1/0/custom_data_1 = 8
1:1/0/custom_data_2 = -1
0:4/0 = 0
0:4/0/custom_data_1 = -1
1:4/0 = 0
1:4/0/custom_data_1 = -1
1:4/0/custom_data_2 = 1
2:4/0 = 0
2:4/0/custom_data_1 = -1
2:4/0/custom_data_2 = 2

[sub_resource type="TileSet" id="TileSet_8o8fv"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(16, 8)
custom_data_layer_0/name = "Player Tile"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "Enemy Tile"
custom_data_layer_1/type = 2
custom_data_layer_2/name = "Trap Tile"
custom_data_layer_2/type = 2
sources/0 = SubResource("TileSetAtlasSource_r6ms3")

[node name="levelexample" type="Node2D"]
script = ExtResource("1_yxd6m")

[node name="MapManager" type="Node2D" parent="." node_paths=PackedStringArray("surface_layer", "wall_layer", "select_layer")]
script = ExtResource("2_pulvh")
surface_layer = NodePath("Map Layer")
wall_layer = NodePath("Wall Layer")
select_layer = NodePath("Selects")

[node name="Map Layer" type="TileMapLayer" parent="MapManager"]
tile_map_data = PackedByteArray("AAD9/wMAAAABAAAAAAD8/wIAAAABAAAAAAD8/wEAAAABAAAAAAD+//7/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAADAAIAAAACAP7/AAABAAAAAAD+/wUAAAAAAAQAAAD+/wQAAAABAAAAAAD8/wQAAAABAAAAAAD8/wMAAAABAAAAAAD7/wIAAAABAAAAAAD7////AAADAAIAAAD7/wEAAAABAAAAAAD7/wAAAAAAAAAAAAD6//7/AAAAAAAAAAD///r/AAAAAAAAAAAAAPr/AAAAAAAAAAADAPz/AAABAAAAAAAEAP//AAABAAQAAAD//wcAAAABAAAAAAD+/wcAAAABAAAAAAD+/wYAAAABAAAAAAADAAEAAAABAAAAAAD//wYAAAABAAAAAAD///n/AAABAAAAAAAFAP//AAABAAAAAAAFAAAAAAABAAAAAAD+/wgAAAABAAAAAAD8/wUAAAAAAAQAAAAAAPv/AAADAAIAAAD7//n/AAABAAAAAAD4//3/AAABAAAAAAAEAAYAAAABAAAAAAAGAPz/AAABAAAAAAACAPr/AAABAAAAAAAEAPn/AAABAAAAAAAEAPr/AAABAAQAAAAFAPn/AAABAAAAAAAFAPr/AAABAAAAAAAFAPv/AAABAAAAAAAHAPn/AAABAAAAAAAHAPr/AAABAAAAAAADAAQAAAABAAAAAAAHAAgAAAABAAAAAAAHAAcAAAABAAAAAAAHAAYAAAABAAAAAAAHAAUAAAABAAAAAAAHAAQAAAABAAAAAAAHAAMAAAABAAAAAAAHAAIAAAABAAAAAAAHAAEAAAABAAAAAAAHAAAAAAABAAAAAAAHAP//AAABAAAAAAAHAP7/AAABAAAAAAAHAP3/AAABAAAAAAAHAPz/AAABAAAAAAAHAPv/AAABAAAAAAAGAPv/AAABAAAAAAAGAPr/AAABAAAAAAAGAPn/AAABAAAAAAADAPn/AAABAAAAAAACAPn/AAABAAAAAAABAPn/AAABAAAAAAAAAPn/AAABAAAAAAD+//n/AAABAAAAAAD9//n/AAABAAAAAAD8//n/AAABAAAAAAD6//n/AAABAAAAAAD5//n/AAABAAAAAAD4//n/AAABAAAAAAD4//r/AAABAAAAAAD4//v/AAABAAAAAAD4//z/AAABAAAAAAD4//7/AAABAAAAAAD4////AAABAAAAAAD4/wAAAAABAAAAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAABAAAAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wcAAAABAAAAAAD5/wcAAAABAAAAAAD6/wcAAAABAAAAAAD7/wcAAAABAAAAAAD8/wcAAAABAAAAAAD9/wcAAAABAAAAAAAAAAcAAAABAAAAAAABAAcAAAABAAAAAAACAAcAAAABAAAAAAADAAcAAAABAAAAAAAEAAcAAAABAAAAAAAFAAcAAAABAAAAAAAGAAgAAAABAAAAAAAFAAgAAAABAAAAAAAEAAgAAAABAAAAAAADAAgAAAABAAAAAAACAAgAAAABAAAAAAABAAgAAAABAAAAAAAAAAgAAAABAAAAAAD//wgAAAABAAAAAAD9/wgAAAABAAAAAAD8/wgAAAABAAAAAAD7/wgAAAABAAAAAAD6/wgAAAABAAAAAAD5/wgAAAABAAAAAAD4/wgAAAABAAAAAAD6////AAADAAIAAAD8////AAADAAIAAAD9////AAADAAIAAAD+////AAADAAIAAAD/////AAADAAIAAAAAAP//AAADAAIAAAABAP//AAADAAIAAAD6//3/AAADAAIAAAD7//3/AAADAAIAAAD8//3/AAADAAIAAAD9//3/AAADAAIAAAD+//3/AAADAAIAAAD///3/AAADAAIAAAD///z/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAADAAIAAAD6//v/AAADAAIAAAD7//v/AAADAAIAAAD8//v/AAADAAIAAAD9//v/AAADAAIAAAD+//v/AAADAAIAAAD///v/AAADAAIAAAABAPv/AAADAAIAAAABAP7/AAAAAAAAAAAAAP7/AAAAAAAAAAD///7/AAAAAAAAAAD9//7/AAAAAAAAAAD8//7/AAAAAAAAAAD7//7/AAAAAAAAAAD6//z/AAAAAAAAAAD7//z/AAAAAAAAAAD8//z/AAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAAAAAD6//r/AAAAAAAAAAD7//r/AAAAAAAAAAD8//r/AAAAAAAAAAD9//r/AAAAAAAAAAD+//r/AAAAAAAAAAABAPr/AAAAAAAAAAD6/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAD5//r/AAABAAAAAAD5//z/AAABAAAAAAD5//v/AAABAAAAAAD5//3/AAABAAAAAAD5//7/AAABAAAAAAD5////AAABAAAAAAD5/wAAAAABAAAAAAD5/wEAAAABAAAAAAD6/wEAAAABAAAAAAD9/wEAAAABAAAAAAD+/wEAAAABAAAAAAD+/wIAAAABAAAAAAD//wIAAAABAAAAAAAAAAIAAAABAAAAAAABAAIAAAABAAAAAAAAAAEAAAABAAAAAAD//wEAAAABAAAAAAABAAEAAAABAAAAAAACAAEAAAABAAAAAAACAAAAAAABAAAAAAACAP//AAABAAAAAAACAP3/AAAAAAQAAAACAPz/AAABAAAAAAACAPv/AAABAAAAAAAEAPv/AAABAAQAAAAEAPz/AAABAAQAAAAEAP3/AAACAAQAAAADAP3/AAAAAAQAAAADAPr/AAABAAAAAAADAPv/AAABAAAAAAADAP7/AAABAAAAAAADAP//AAABAAAAAAADAAAAAAABAAAAAAADAAIAAAABAAAAAAADAAMAAAABAAAAAAACAAMAAAABAAAAAAACAAIAAAABAAAAAAABAAMAAAABAAAAAAAAAAMAAAABAAAAAAD//wMAAAABAAAAAAD+/wMAAAABAAAAAAD9/wIAAAABAAAAAAD6/wIAAAABAAAAAAD5/wIAAAABAAAAAAD5/wMAAAABAAAAAAD6/wMAAAABAAAAAAD7/wMAAAABAAAAAAD9/wQAAAABAAAAAAD7/wQAAAABAAAAAAD5/wQAAAABAAAAAAD5/wUAAAAAAAQAAAD5/wYAAAABAAAAAAD6/wUAAAAAAAQAAAD6/wQAAAABAAAAAAD6/wYAAAABAAAAAAD7/wUAAAAAAAQAAAD9/wUAAAAAAAQAAAD7/wYAAAABAAAAAAD8/wYAAAABAAAAAAD9/wYAAAABAAAAAAAAAAYAAAABAAAAAAABAAYAAAABAAAAAAACAAYAAAABAAAAAAADAAYAAAABAAAAAAAFAAYAAAABAAAAAAAGAAYAAAABAAAAAAAEAAUAAAAJAAQAAAADAAUAAAAAAAQAAAACAAUAAAAAAAQAAAABAAUAAAAAAAQAAAABAAQAAAABAAAAAAAAAAQAAAABAAAAAAD//wQAAAABAAAAAAD//wUAAAAAAAQAAAAAAAUAAAAAAAQAAAAGAAcAAAABAAAAAAAGAAUAAAABAAAAAAAGAAQAAAABAAAAAAAFAAQAAAABAAAAAAAFAAMAAAABAAAAAAAFAAIAAAABAAAAAAAFAAEAAAABAAAAAAAGAAMAAAABAAAAAAAFAAUAAAABAAAAAAAEAAQAAAABAAQAAAACAAQAAAABAAAAAAAEAAMAAAABAAQAAAAEAAIAAAABAAQAAAAEAAEAAAABAAQAAAAEAAAAAAABAAQAAAAGAAEAAAABAAAAAAAGAAIAAAABAAAAAAAFAP7/AAABAAAAAAAGAP7/AAABAAAAAAAGAP3/AAABAAAAAAAGAP//AAABAAAAAAAGAAAAAAABAAAAAAAFAP3/AAABAAAAAAAFAPz/AAABAAAAAAAEAP7/AAABAAQAAAA=")
tile_set = ExtResource("3_bs1i3")

[node name="Wall Layer" type="TileMapLayer" parent="MapManager"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAACAP7/AAAKAAkAAAACAP//AAAKAAkAAAACAAAAAAAKAAkAAAABAAEAAAAKAAgAAAAAAAEAAAAKAAgAAAD//wEAAAAKAAgAAAD+/wEAAAAKAAgAAAD9/wEAAAAKAAgAAAD8/wEAAAAKAAgAAAD7/wEAAAAKAAgAAAD6/wEAAAAKAAgAAAD5/wAAAAAKAAkAAAD5////AAAKAAkAAAD5//7/AAAKAAkAAAD5//3/AAAKAAkAAAD5//z/AAAKAAkAAAD5//v/AAAKAAkAAAD5//r/AAAKAAkAAAD6//n/AAAKAAgAAAD7//n/AAAKAAgAAAD8//n/AAAKAAgAAAD9//n/AAAKAAgAAAD+//n/AAAKAAgAAAD///n/AAAKAAgAAAAAAPn/AAAKAAgAAAACAPv/AAAKAAkAAAACAPz/AAAKAAkAAAACAPr/AAAKAAkAAAABAPn/AAAKAAgAAAADAP7/AAAIAAEAAAADAPz/AAAIAAEAAAAGAAIAAAAJAAIAAAADAAMAAAAJAAIAAAAGAAcAAAAJAAIAAAAHAAUAAAAJAAIAAAAEAAcAAAAKAAAAAAD//wMAAAAKAAAAAAD8/wcAAAAKAAAAAAD6/wMAAAAKAAAAAAA=")
tile_set = ExtResource("3_bs1i3")

[node name="Selects" type="TileMapLayer" parent="MapManager"]
tile_set = ExtResource("4_7lr0t")

[node name="Entity Initializer" type="TileMapLayer" parent="MapManager" node_paths=PackedStringArray("map_manager", "trap_manager", "turn_manager", "player_manager", "enemy_manager", "cursor")]
scale = Vector2(0.75, 0.75)
tile_map_data = PackedByteArray("AAD4/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAAFAAAAAAABAAAAAAAGAAUAAAABAAAAAAAHAP3/AAABAAAAAAD7/wcAAAAAAAAAAAD4/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAACAAYAAAAAAAQAAAA=")
tile_set = SubResource("TileSet_8o8fv")
script = ExtResource("6_pa45f")
map_manager = NodePath("..")
trap_manager = NodePath("../../Turn_Manager/Trap_Manager")
turn_manager = NodePath("../../Turn_Manager")
player_manager = NodePath("../../Turn_Manager/Player_Unit_Manager")
enemy_manager = NodePath("../../Turn_Manager/Unit_Manager")
cursor = NodePath("../../Cursor")
enemy_entities = Array[ExtResource("7_w5nbb")]([ExtResource("8_tm18g"), ExtResource("9_ccsti"), null, null, null, null, null, null, null])
trap_scenes = Array[PackedScene]([ExtResource("10_ccsti")])

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Turn_Manager" type="Node" parent="."]
script = ExtResource("5_hpt63")
metadata/_custom_type_script = "uid://g6evar1ip8pg"

[node name="Player_Unit_Manager" type="Node" parent="Turn_Manager" node_paths=PackedStringArray("cursor", "map_manager", "action_decoder")]
script = ExtResource("6_ugvcm")
cursor = NodePath("../../Cursor")
unit_packed = ExtResource("12_w5nbb")
map_manager = NodePath("../../MapManager")
action_decoder = NodePath("../../ActionDecoder")
metadata/_custom_type_script = "uid://j80klyllg32k"

[node name="Unit_Manager" type="Node" parent="Turn_Manager" node_paths=PackedStringArray("map_manager", "action_decoder")]
script = ExtResource("12_pa45f")
map_manager = NodePath("../../MapManager")
action_decoder = NodePath("../../ActionDecoder")
metadata/_custom_type_script = "uid://ci5a1fo4lp0hk"

[node name="Trap_Manager" type="Node" parent="Turn_Manager" node_paths=PackedStringArray("map_manager", "action_decoder")]
script = ExtResource("17_tm18g")
map_manager = NodePath("../../MapManager")
action_decoder = NodePath("../../ActionDecoder")
metadata/_custom_type_script = "uid://drj8oexjt8k2u"

[node name="ActionDecoder" parent="." node_paths=PackedStringArray("map_manager") instance=ExtResource("7_kb0u0")]
map_manager = NodePath("../MapManager")

[node name="Cursor" parent="." instance=ExtResource("8_262ej")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI-Phase-2" parent="CanvasLayer" node_paths=PackedStringArray("map_manager", "turn_manager", "player_unit_manager") instance=ExtResource("9_dilsu")]
visible = false
mouse_filter = 2
map_manager = NodePath("../../MapManager")
turn_manager = NodePath("../../Turn_Manager")
player_unit_manager = NodePath("../../Turn_Manager/Player_Unit_Manager")

[connection signal="timeout" from="Timer" to="." method="_update_timeout"]
[connection signal="unit_moved" from="Turn_Manager/Player_Unit_Manager" to="CanvasLayer/UI-Phase-2" method="draw_unit_movement"]
[connection signal="unit_selected" from="Turn_Manager/Player_Unit_Manager" to="." method="_on_cursor_entity_selected"]
[connection signal="deselected" from="Cursor" to="." method="_on_cursor_deselected"]
[connection signal="deselected" from="Cursor" to="CanvasLayer/UI-Phase-2" method="deselect"]
[connection signal="entity_selected" from="Cursor" to="." method="_on_cursor_entity_selected"]
[connection signal="tile_selected" from="Cursor" to="Turn_Manager/Player_Unit_Manager" method="player_attempt_to_move_unit"]
[connection signal="unit_selected" from="Cursor" to="CanvasLayer/UI-Phase-2" method="cusor_select_unit"]
[connection signal="highlight_action_tiles" from="CanvasLayer/UI-Phase-2" to="MapManager" method="highlight_tiles"]
